@@ -7,6 +7,7 @@ import dev.stemcraft.api.minigame.MiniGameArenaHandler;
 import dev.stemcraft.api.model.SCRegion;
 import dev.stemcraft.api.service.region.RegionListener;
 import dev.stemcraft.api.util.NamespaceId;
+import dev.stemcraft.api.util.PlayerUtil;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.GameMode;
@@ -297,12 +298,6 @@ public class BoatRaceArenaHandler implements MiniGameArenaHandler {
     }
 
     @Override
-    public Location onPlayerJoinSpectator(MiniGameArena arena, Player player) {
-        Location spectatorSpawn = arena.getSpectatorSpawn();
-        return spectatorSpawn != null ? spectatorSpawn : arena.getLobbySpawn();
-    }
-
-    @Override
     public void onPlayerLeaveArena(MiniGameArena arena, Player player) {
         removePlayerState(arena, player);
         if (arena.getStatus() == MiniGameArena.ArenaStatus.STARTING && arena.numPlayers() < arena.getMinPlayers()) {
@@ -401,7 +396,7 @@ public class BoatRaceArenaHandler implements MiniGameArenaHandler {
         Location finishLookTarget = finishLookTarget(arena);
         for (int i = 0; i < players.size(); i++) {
             Player player = players.get(i);
-            int slot = Math.min(i, Math.max(0, grid.size() - 1));
+            int slot = Math.clamp(grid.size() - 1, 0, i);
             boatRace.assignedGridSlots(arena).put(player.getUniqueId(), slot);
             Location slotLocation = orientTowardFinish(grid.get(slot).clone(), finishLookTarget);
             boatRace.checkpointLocations(arena).put(player.getUniqueId(), slotLocation.clone());
@@ -421,7 +416,7 @@ public class BoatRaceArenaHandler implements MiniGameArenaHandler {
         boatRace.markRaceStarted(arena);
         for (Player player : arena.getPlayers()) {
             player.setGameMode(GameMode.ADVENTURE);
-            player.setHealth(Math.min(player.getMaxHealth(), 20.0d));
+            player.setHealth(PlayerUtil.getMaxHealth(player));
             player.setFoodLevel(20);
             player.setSaturation(20.0f);
             player.setFireTicks(0);
@@ -508,7 +503,7 @@ public class BoatRaceArenaHandler implements MiniGameArenaHandler {
             return;
         }
 
-        player.setHealth(Math.min(player.getMaxHealth(), 20.0d));
+        player.setHealth(PlayerUtil.getMaxHealth(player));
         player.setFoodLevel(20);
         player.setSaturation(20.0f);
         player.setFireTicks(0);
